Add assembly for building a galaxy binary for a rack application to use the rack server

--- a/pom.xml
+++ b/pom.xml
@@ -344,6 +344,7 @@
         <module>rack</module>
         <module>rack-packaging-plugin</module>
         <module>rack-launcher</module>
+        <module>rack-packaging</module>
         <module>testing</module>
         <module>launcher</module>
         <module>packaging</module>
